# Z-Soda

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  PROGRESS.md  README.md  TEAM.md
.github/workflows/: ci.yml
artifacts/windows/: README.md  ZSoda.aex  ZSoda.aex.sha256
docs/perf/: README.md
docs/research/: 2026-03-02-ae-pfcmd-depthanything-notes.md  2026-03-02-integration-checklist.md  2026-03-02-notes.md  2026-03-03-ort-runtime-collision-analysis.md  2026-03-03-theanimescripter-reference.md  2026-03-04-depth-quality-improvement-review.md  2026-03-05-depth-quality-ab-experiment-plan.md  2026-03-06-multiview-quality-plan.md  2026-03-06-quick-depth-3-quality-boost-reverse-engineering.md  2026-03-07-model-backbone-reassessment.md  2026-03-07-official-da3-python-backend.md
docs/scripts/: ZSodaDepthExtractPanel.jsx
docs/tools/: still-quality-harness.md
models/: README.md  models.manifest
plugin/: CMakeLists.txt
plugin/ae/: AeCommandRouter.cpp  AeCommandRouter.h  AeDiagnostics.h  AeHostAdapter.cpp  AeHostAdapter.h  AeParams.cpp  AeParams.h  AePluginEntry.cpp  Info.plist.in  LoaderProbeEntry.cpp  ZSodaAeFlags.h  ZSodaLoaderProbePiPL.r  ZSodaPiPL.r  ZSodaVersion.h
plugin/backends/: BackendConfig.h
plugin/core/: BufferPool.cpp  BufferPool.h  Cache.cpp  Cache.h  CompatMutex.h  DepthOps.cpp  DepthOps.h  Frame.h  PixelConversion.h  RenderPipeline.cpp  RenderPipeline.h  Tiler.cpp  Tiler.h
plugin/inference/: DummyInferenceEngine.cpp  DummyInferenceEngine.h  EmbeddedPayload.cpp  EmbeddedPayload.h  EngineFactory.cpp  InferenceEngine.h  ManagedInferenceEngine.cpp  ManagedInferenceEngine.h  ModelAutoDownloader.cpp  ModelAutoDownloader.h  ModelCatalog.cpp  ModelCatalog.h  OnnxRuntimeBackend.cpp  OnnxRuntimeBackend.h  OrtDynamicLoader.cpp  OrtDynamicLoader.h  PythonAutostart.cpp  PythonAutostart.h  PythonServiceAutostart.cpp  PythonServiceAutostart.h  RemoteInferenceBackend.cpp  RemoteInferenceBackend.h  RuntimeOptions.h  RuntimePathResolver.cpp  RuntimePathResolver.h
tests/: CMakeLists.txt  TestSupport.cpp  TestSupport.h  perf_harness.cpp  test_ae_params.cpp  test_ae_params_main.cpp  test_ae_router.cpp  test_ae_router_main.cpp  test_cache.cpp  test_core_main.cpp  test_depth_ops.cpp  test_embedded_payload.cpp  test_embedded_payload_main.cpp  test_inference_engine.cpp  test_inference_main.cpp  test_python_autostart.cpp  test_render_main.cpp  test_render_pipeline.cpp  test_runtime_path_resolver.cpp  test_tiler.cpp
tools/: CMakeLists.txt  StillQualityHarness.cpp  build_aex.ps1  build_embedded_payload.py  build_plugin_macos.sh  check_release_readiness.py  collect_ae_loader_diagnostics.ps1  distill_any_depth_remote_service.py  download_model.ps1  download_model.sh  export_depth_model_onnx.py  official_da3_remote_client.py  official_da3_remote_service.py  official_da3_still.py  package_layout.py  package_plugin.ps1  package_plugin.sh  prepare_ort_sidecar_release.py  prepare_package_stage.py  prepare_release_assets.py  qd3_runtime_trace.py  remote_inference_worker.py  run_local_ci.sh  run_packaging_smoke.py  still_compare_gui.py  still_quality_compare.py  validate_self_contained_runtime.py
